Reverted unnecessary change